packages/kotlin/ttrp-frontend/src/test/resources/negative/param-003-builtin-nondate.ttrp
param x: int = @run-date
